nobase_include_HEADERS = sangster/api.h \
                         sangster/lcd.h \
                         sangster/lcd_charmap.h \
						 sangster/pcd8544.h \
						 sangster/pcd8544/core.h \
						 sangster/pcd8544/bmp.h \
						 sangster/pcd8544/draw.h \
						 sangster/pcd8544/text.h \
						 sangster/pcd8544/transaction.h \
                         sangster/pinout.h \
                         sangster/ring_buff_8.h \
                         sangster/rtc_1307.h \
                         sangster/sd.h \
                         sangster/sd/fat_structs.h \
                         sangster/sd/sd_card.h \
                         sangster/sd/sd_fat_mainpage.h \
                         sangster/sd/sd_file.h \
                         sangster/sd/sd_volume.h \
                         sangster/sonar.h \
                         sangster/timer.h \
                         sangster/timer0.h \
                         sangster/twi.h \
                         sangster/usart.h \
                         sangster/usart_p.h \
                         sangster/util.h
